--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "astro": "^5.7.5",
+    "astro-embed": "^0.9.0",
     "astro-expressive-code": "^0.40.2",
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
